Update chromadb to langchain_chroma in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Généré automatiquement le 20 octobre 2025
 
-chromadb==0.2.2
+langchain_chroma==0.2.2
 google-generativeai==0.7.2
 langchain==0.2.17
 langchain-community==0.2.19
